2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/configure/configure.py:
	  Give programs more time to react to a TERM before getting KILLed.

2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/nl.po:
	  Update translation.

2008-04-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py:
	Use correct variable when iterating.
	* flumotion/component/combiners/switch/switch.py:
	Extra debuging.

2008-04-09  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/videotest/videotest_wizard.py
	(TestVideoProducerStep.worker_changed): Check for the level element,
	fixes #915

2008-04-08  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_encoding.glade:
	* flumotion/component/encoders/mulaw/mulaw-wizard.glade:
	Add a label to the encoding page.
	Don't expand vertically on the label on the mulaw page

2008-04-08  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/misc/httpserver/httpserver.py
	(CancellableRequest.finish): Use stored fd number, in case the
	transport's fd was closed early. Fixes #920.

2008-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/component.glade:
	* flumotion/component/base/eaters.glade:
	* flumotion/component/consumers/disker/disker.glade:
	* flumotion/component/consumers/httpstreamer/httpstreamer-wizard.glade:
	* flumotion/component/consumers/shout2/shout2-wizard.glade:
	* flumotion/component/encoders/theora/theora-wizard.glade:
	* flumotion/component/producers/looper/flufileinfo.glade:
	* flumotion/component/producers/looper/looper.glade:
	  Unmark strings for translation.
	  Add/fix some tooltips.

2008-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/keycards.py:
	  Put the id in the repr of keycards.

2008-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	Reviewed by: Arek

	* flumotion/component/misc/httpserver/file.py: